Bug 1185812 - rejigger the ordering of fonts within a family to avoid obscure faces. r=heycam a=sylvestre